# cutpanion

./: .gitignore  COPYRIGHT  Dockerfile  LICENSE  README.md  conftest.py  entrypoint.sh  manage.py  pyproject.toml  setup.sh  setup_local.sh
accounts/: urls.py
accounts/tests/: factories.py
config/gunicorn/: dev.py
cutpanion/: settings.py  urls.py  util.py  wsgi.py
frontpage/: apps.py  urls.py  views.py
frontpage/migrations/: ________0001_initial.py
mypage/: admin.py  fatlossjourney.py  forms.py  models.py  urls.py  views.py
mypage/migrations/: 0001_initial.py  0002_fatlossjourneyparams_username.py  0003_weightbf.py  0004_whycut.py  0005_alter_weightbf_date.py
mypage/tests/: test_views.py
static/css/: home_style.css
templates/: base.html  home.html
templates/accounts/: login.html
templates/frontpage/: add_choice.html  add_poll.html  endpoll.html  poll_detail.html  poll_edit.html  poll_result.html  polls_list.html
templates/includes/: navbar.html
templates/mypage/: fatloss_journey_add_form.html  mypage.html  trajectory.html  weight_bf_form.html  whycut_list.html
